--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,4 +125,9 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+  .react-flow__node {
+    visibility: visible !important;
+    opacity: 1 !important;
+  }
 }
